Fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@
 	background-color: #000000;
 	width: 1000px;
 	height: 95vh;
-	margin-left: 33%;
-	margin-right: 33%;
+	margin: 0 auto;
 	border-bottom-width: 0px;
 	padding-left: 0px;
 	padding-top: 0px;
@@ -80,8 +79,7 @@
 
 .footer {
 	background-color: #440078;
-	margin-left: 33%;
-	margin-right: 33%;
+	margin: 0 auto;
 	width: 1000px;
 	height: 10px;
 	padding-left: 0px;
